fix(Personal-project): Remove overflow-x

--- a/style/main.css
+++ b/style/main.css
@@ -5,7 +5,6 @@
 }
 body {
     max-width: 100%;
-    overflow-x: hidden;
 }
 .container {
     display: grid;
